Добавление шаблонов двух страниц и подгрузка данных в БД

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
                 <a href="/" class="{{if eq .CurrentPage "home"}}active{{end}}">Главная</a>
                 <a href="/planets" class="{{if eq .CurrentPage "planets"}}active{{end}}">Планеты</a>
                 <a href="/galaxies" class="{{if eq .CurrentPage "galaxies"}}active{{end}}">Галактики</a>
-                <a href="/admin/login" class="admin-link">🔐 Админ</a>
+                <a href="/admin/login" class="admin-link">Админ</a>
             </div>
         </nav>
     </header>
