--- a/templates/planet_detail.html
+++ b/templates/planet_detail.html
@@ -1,4 +1,4 @@
-{{define "content"}} {{with .Planet}}
+{{define "planet_detail"}} {{with .Planet}}
 <div class="breadcrumbs">
     <a href="/">Главная</a> > <a href="/planets">Планеты</a> >
     <span>{{.Name}}</span>
