--- a/templates/base.html
+++ b/templates/base.html
@@ -20,16 +20,33 @@
     </header>
 
     <main>
-        {{/* Этот блок определяет, какой контент показывать */}}
+        {{/* Определяем, какой шаблон показывать */}}
         {{if eq .CurrentPage "home"}}
             {{template "home" .}}
+
         {{else if eq .CurrentPage "planets"}}
-            {{template "planets" .}}
+            {{if .Planet}}
+                {{/* Детальная страница планеты */}}
+                {{template "planet_detail" .}}
+            {{else}}
+                {{/* Список планет */}}
+                {{template "planets" .}}
+            {{end}}
+
         {{else if eq .CurrentPage "galaxies"}}
-            {{template "galaxies" .}}
+            {{if .Galaxy}}
+                {{/* Детальная страница галактики */}}
+                {{template "galaxy_detail" .}}
+            {{else}}
+                {{/* Список галактик */}}
+                {{template "galaxies" .}}
+            {{end}}
+
         {{else}}
-            {{/* Для админки и других страниц */}}
-            {{template "content" .}}
+            {{/* Для других страниц (например, админки) */}}
+            <h1>Страница в разработке</h1>
+            <p>Эта страница пока не доступна.</p>
+            <a href="/">Вернуться на главную</a>
         {{end}}
     </main>
 
