--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -52,10 +52,9 @@
 
     <div class="action-card">
         <h3>⚙️ Настройки системы</h3>
-        <p>Управление пользователями и настройками</p>
+        <p>Управление пользователями</p>
         <div class="action-buttons">
             <a href="/admin/users" class="btn">Пользователи</a>
-            <a href="/admin/settings" class="btn">Настройки</a>
         </div>
     </div>
 </div>
