--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,9 @@
         {{else if eq .CurrentPage "admin_user_detail"}}
             {{template "admin_user_detail" .}}
 
+        {{else if eq .CurrentPage "admin_confirm_delete"}}
+                    {{template "admin_confirm_delete" .}}
+
         {{else}}
             <h1>Страница в разработке</h1>
             <p>Эта страница пока не доступна.</p>
