Апгрейд подсчета пользователей в админке

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -21,7 +21,7 @@
 
     <div class="stat-card admin-stat">
         <div class="stat-icon">👥</div>
-        <div class="stat-number">1</div>
+        <div class="stat-number">{{.UserCount}}</div>
         <div class="stat-label">Администраторов</div>
         <a href="/admin/users" class="btn-small">Просмотр</a>
     </div>
